math-core/tests/snapshots/conversion_test__greek_letter.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\alpha"
---
<math>
    <mi>α</mi>
</math>
