math-core/tests/snapshots/conversion_test__greek_letter_boldsymbol.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\boldsymbol{\\alpha}"
---
<math>
    <mi>𝜶</mi>
</math>
