math-core/tests/snapshots/conversion_test__greek_letter_tf.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\Gamma\\varGamma\\boldsymbol{\\Gamma\\varGamma}"
---
<math>
    <mpadded><mi mathvariant="normal">Γ</mi></mpadded>
    <mi>Γ</mi>
    <mrow>
        <mi>𝚪</mi>
        <mi>𝜞</mi>
    </mrow>
</math>
