math-core/tests/snapshots/conversion_test__hspace.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\hspace{1cm}"
---
<math>
    <mspace width="2.8453rem" style="width:2.8453rem"/>
</math>
