math-core/tests/snapshots/conversion_test__hspace_whitespace.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\hspace{  4em }"
---
<math>
    <mspace width="4em"/>
</math>
