math-core/tests/snapshots/conversion_test__hspace_whitespace_in_between.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\hspace{  4  em }"
---
<math>
    <mspace width="4em"/>
</math>
